--- a/blog-details.html
+++ b/blog-details.html
@@ -259,6 +259,23 @@
                      <div class="common-heading-area">
                         <h3>Manage risks with smart strategies</h3>
                         <img src="assets/images/blog/blog2.png" alt="img" class="rounded w-100 mb-20">
+                        <h3>Manage risks with smart strategies</h3>
+                        <ul style="list-style: decimal;margin-left:30px" class="d-flex flex-column g-10">
+                           <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum aut reprehenderit facere pariatur itaque saepe id at cupiditate culpa soluta distinctio hic, voluptate dolore laudantium voluptates maxime. Reprehenderit, odio.</p></li>
+                           <li><p>lorem ipsum dolor sit amet consectetur adipisicing elit.</p></li>
+                           <li>
+                              <ul style="list-style:upper-roman ;margin-left:30px">
+                                 <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore sint reiciendis mollitia quis cupiditate molestias, adipisci vitae nisi asperiores rerum, ea architecto quia eos aut voluptates veritatis dolores vero maiores.</p></li>
+                                 <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore sint reiciendis mollitia quis cupiditate molestias, adipisci vitae nisi asperiores rerum, ea architecto quia eos aut voluptates veritatis dolores vero maiores.</p></li>
+                                 <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore sint reiciendis mollitia quis cupiditate molestias, adipisci vitae nisi asperiores rerum, ea architecto quia eos aut voluptates veritatis dolores vero maiores.</p></li>
+                                 <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore sint reiciendis mollitia quis cupiditate molestias, adipisci vitae nisi asperiores rerum, ea architecto quia eos aut voluptates veritatis dolores vero maiores.</p></li>
+                                 <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore sint reiciendis mollitia quis cupiditate molestias, adipisci vitae nisi asperiores rerum, ea architecto quia eos aut voluptates veritatis dolores vero maiores.</p></li>
+                              </ul>
+                           </li>
+                        </ul>
+                        <ul style="list-style:circle;margin-left:30px">
+                           <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, eius quo at debitis id dignissimos ipsum laborum similique consectetur voluptatum quam officiis, ad culpa in assumenda et autem perspiciatis. Ea!</p></li>
+                        </ul>
                         <p class="mt-20">Diversification is a fundamental strategy in risk management. By spreading investments across various asset classes, sectors, and geographical regions, traders can mitigate the impact of a poor-performing asset. This strategy ensures that losses in one area can be balanced by gains in another, creating a more stable and consistent growth pattern. Diversification also helps to reduce the volatility of a portfolio, offering protection against market fluctuations. To maximize the benefits, it's crucial to understand the correlation between different assets and diversify intelligently, rather than just adding more assets randomly.</p>
                         <p class="mt-20">Having clear, realistic trading goals is essential for maintaining focus and discipline in the trading world. Setting achievable targets helps traders stay on track, reduce emotional decision-making, and measure success effectively. Goals should be specific, measurable, attainable, relevant, and time-bound (SMART). For example, instead of aiming for “high returns,” aim for a specific percentage increase over a defined period. Regularly reviewing and adjusting goals based on market conditions and personal progress ensures that traders remain aligned with their long-term financial objectives.</p>
                         <p class="mt-20">Stop-loss and take-profit orders are vital tools for managing risk in trading. A stop-loss order automatically sells a position when it hits a certain price, minimizing potential losses. Conversely, a take-profit order locks in gains by selling a position when it reaches a predetermined profit level. These tools help traders stick to their strategies without letting emotions influence their decisions. Using stop-loss and take-profit orders allows for better risk-reward calculations, letting traders manage potential outcomes efficiently while protecting their capital from significant losses.</p>
