--- a/404.html
+++ b/404.html
@@ -1,53 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Tradding Web App</title>
-      <link
-         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-         rel="stylesheet"
-         />
-      <link
-         rel="stylesheet"
-         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-         />
-         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css">
-      <link rel="stylesheet" href="assets/css/common.css" />
-      <link rel="stylesheet" href="assets/css/style.css" />
-      <link rel="stylesheet" href="assets/css/responsive.css" />
-   </head>
-   <body>
-     <section class="page_404 position-relative">
-      <div class="shap-404-after">
-         Marketsterminal
-      </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tradding Web App</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css"
+    />
+    <link rel="stylesheet" href="assets/css/common.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
+  </head>
+  <body>
+    <section class="page_404 position-relative">
+      <div class="shape-404-after">Marketsterminal</div>
       <div class="container">
-         <div class="row">
-            <div class="col-sm-12 ">
-            <div class="col-sm-10 col-sm-offset-1  text-center">
-               <div class="logo-404">
-                 <a href="https://marketsterminal.com/"><img src="https://marketsterminal.com/images/logo/favicon.png" alt=""></a>
-               </div>
-               <div class="four_zero_four_bg mt-20">
-                  <h1 class="text-center ">404</h1>
-               </div>
-               <div class="contant_box_404">
-                  <div class="common-heading-area">           
-                     <h3>Look like you're lost</h3>
-                     <p> the page you are looking for not avaible!
-                     </p>
-                  </div>
-                  <a href="https://marketsterminal.com/" class="primary-btn mt-30 border-1">Go to Home</a>
-               </div>
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="col-sm-10 col-sm-offset-1 text-center">
+              <div class="logo-404">
+                <a href="https://marketsterminal.com/"
+                  ><img
+                    src="https://marketsterminal.com/images/logo/favicon.png"
+                    alt=""
+                /></a>
+              </div>
+              <div class="four_zero_four_bg mt-20">
+                <h1 class="text-center">404</h1>
+              </div>
+              <div class="content_box_404">
+                <div class="common-heading-area">
+                  <h3>Look like you're lost</h3>
+                  <p>the page you are looking for not avaible!</p>
+                </div>
+                <a
+                  href="https://marketsterminal.com/"
+                  class="primary-btn mt-30 border-1"
+                  >Go to Home</a
+                >
+              </div>
             </div>
-            </div>
-         </div>
+          </div>
+        </div>
       </div>
       <div class="shape-404">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#F5C448" fill-opacity="1" d="M0,288L80,266.7C160,245,320,203,480,181.3C640,160,800,160,960,138.7C1120,117,1280,75,1360,53.3L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
-     </div>
-     </section>  
-     
-   </body>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path
+            fill="#F5C448"
+            fill-opacity="1"
+            d="M0,288L80,266.7C160,245,320,203,480,181.3C640,160,800,160,960,138.7C1120,117,1280,75,1360,53.3L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
+          ></path>
+        </svg>
+      </div>
+    </section>
+  </body>
 </html>
