price section update , footer text update

--- a/index-3.html
+++ b/index-3.html
@@ -112,6 +112,8 @@
                                           <li><a href="#">Spreads & conditions</a></li>
                                           <li><a href="#">Trading advantage</a></li>
                                           <li><a href="#">Why choose us</a></li>
+                                          <li><a href="#">Open Account demo</a></li>
+                                           
                                        </ul>
                                     </div>
                                  </div>
