price card update

--- a/index.html
+++ b/index.html
@@ -1461,9 +1461,12 @@
           <div class="col-lg-4 col-md-6">
             <div class="plan-card">
               <div class="plan-card-header">
+                <div class="plan-icon mb-2">
+                  <img src="assets/images/icon/Copy-Trading.webp" alt="icon" class="w-100">
+                </div>
                 <h6>Copy Trading Account - Master Trader</h6>
-                <div class="line-1 mt-2"></div>
-                <p>Best For : Traders who prefer passive investing by copying successful traders.</p>
+                 
+                <p class="mt-4"><b>Best For :</b> Traders who prefer passive investing by copying successful traders.</p>
                 <!-- <span>Free</span>
                 <h5>$00.00</h5> -->
               </div>
