arabic icon add, text color change

--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
                   </li>
                   <li>
                     <a class="dropdown-item" href="#">
+                      <img src="assets/images/icon/arabic.png" alt="icon" />
+                      <span>Arabic</span>
+                      <span class="float-end icon-check"
+                        ><i class="fa-solid fa-circle-check fs-6"></i
+                      ></span>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">
                       <img src="assets/images/icon/italy.png" alt="icon" />
                       <span>Italy</span>
                       <span class="float-end icon-check"
@@ -400,6 +409,15 @@
                             alt="icon"
                           />
                           <span>Bangla</span>
+                          <span class="float-end icon-check"
+                            ><i class="fa-solid fa-circle-check fs-6"></i
+                          ></span>
+                        </a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#">
+                          <img src="assets/images/icon/arabic.png" alt="icon" />
+                          <span>Arabic</span>
                           <span class="float-end icon-check"
                             ><i class="fa-solid fa-circle-check fs-6"></i
                           ></span>
