maintenance , 404, index page update

--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <section class="page_404 position-relative">
-      <div class="shape-404-after">Marketsterminal</div>
+      <div class="shape-404-after">Andro Markets</div>
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
