popular plan text add

--- a/index.html
+++ b/index.html
@@ -1478,12 +1478,15 @@
           <div class="col-lg-4 col-md-6">
             <div class="plan-card">
               <div class="plan-card-header">
+                <div class="popular-plan">
+                  <span><i class="fa-solid fa-circle-notch"></i> Most Popular</span>
+                </div>
                 <div class="plan-icon mb-2">
                   <img src="assets/images/icon/Copy-Trading.webp" alt="icon" class="w-100">
                 </div>
-                <h6>Copy Trading Account - Master Trader</h6>
+                <h6>Standard</h6>
                  
-                <p class="mt-4"><b>Best For :</b> Traders who prefer passive investing by copying successful traders.</p>
+                <p class="mt-4"><b>Best For :</b> Beginner traders.</p>
                 <!-- <span>Free</span>
                 <h5>$00.00</h5> -->
               </div>
