--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@
               <div class="content_box_404">
                 <div class="common-heading-area">
                   <h3>Look like you're lost</h3>
-                  <p>the page you are looking for not avaible!</p>
+                  <p>the page you are looking for not available!</p>
                 </div>
                 <a
                   href="https://marketsterminal.com/"
