--- a/blog-details.html
+++ b/blog-details.html
@@ -16,9 +16,47 @@
       <link rel="stylesheet" href="assets/css/common.css" />
       <link rel="stylesheet" href="assets/css/style.css" />
       <link rel="stylesheet" href="assets/css/responsive.css" />
+
+      <style>
+         .blog-details-section h1{
+            font-size: 32px;
+            line-height: 40px;
+            margin-bottom: 16px;
+            margin-top: 16px;
+         }
+         .blog-details-section h2{
+            font-size: 27px;
+            line-height: 38px;
+            margin-bottom: 16px;
+            margin-top: 16px;
+         }
+         .blog-details-section h3{
+            font-size: 22px;
+            line-height: 30px;
+            margin-top:12px;
+            margin-bottom:12px;
+         }
+         .blog-details-section h4{
+            font-size: 19px;
+            line-height: 29px;
+            margin-top:12px;
+            margin-bottom:12px;
+         }
+         .blog-details-section h5{
+            font-size: 17px;
+            line-height: 25px;
+            margin-top:12px;
+            margin-bottom:12px;
+         }
+         .blog-details-section h5{
+            font-size: 16px;
+            line-height: 24px;
+            margin-top:12px;
+            margin-bottom:12px;
+         }
+      </style>
    </head>
    <body>
-    
       <header class="header-transparent">
          <nav class="navbar navbar-expand-xl">
             <div class="container position-relative">
