--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tradding Web App</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.webp" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
       rel="stylesheet"
     />
     <link
@@ -486,7 +486,7 @@
             </div>
           </div>
           <div class="col-lg-6 offset-md-2 col-md-8 offset-lg-0">
-            <div class="hero-area-thumbnails text-lg-end text-center">
+            <div class="hero-area-thumbnails text-lg-end text-center image-skeleton">
               <img
                 src="assets/images/thumbnails/hero.webp"
                 alt="img"
