menu update index page

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <div class="dropdown-menu megamenu megamenu-3" role="menu">
                   <div class="container">
                     <div class="row g-3">
-                      <div class="col-lg-4 col-md-6">
+                      <div class="col-lg-6 col-md-6">
                         <div class="col-megamenu m-0">
                           <h6>Information</h6>
                           <ul>
@@ -294,7 +294,35 @@
                           </ul>
                         </div>
                       </div>
-                      <div class="col-lg-4 col-md-6">
+                      
+                      <!-- end col-3 -->
+
+                      <div class="col-lg-6 col-md-6">
+                        <div class="col-megamenu border-0">
+                          <h4>Our best spared and condition!</h4>
+                          <a href="#" class="primary-btn">Explore Now</a>
+                          <img
+                            src="assets/images/thumbnails/1.png"
+                            alt="icon"
+                          />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="nav-item dropdown has-megamenu">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  data-bs-toggle="dropdown"
+                  >Help Center <i class="fa-solid fa-angle-down"></i
+                ></a>
+                <div class="dropdown-menu megamenu megamenu-4" role="menu">
+                  <div class="container">
+                    <div class="row g-3">
+                      
+                      <div class="col-lg-6 col-md-6">
                         <div class="col-megamenu">
                           <h6>Contacts</h6>
                           <ul>
@@ -305,7 +333,7 @@
                       </div>
                       <!-- end col-3 -->
 
-                      <div class="col-lg-4 col-md-6">
+                      <div class="col-lg-6 col-md-6">
                         <div class="col-megamenu border-0">
                           <h4>Our best spared and condition!</h4>
                           <a href="#" class="primary-btn">Explore Now</a>
@@ -341,9 +369,9 @@
                            </ul>
                         </div>
                      </li> -->
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a href="#" class="nav-link">Help Center</a>
-              </li>
+              </li> -->
             </ul>
             <ul class="navbar-nav ms-auto">
               <div class="header-right">
