--- a/account-types.html
+++ b/account-types.html
@@ -264,12 +264,12 @@
             </div>
             <div class="row gy-4 mt-70">
                <div class="col-lg-4 col-md-6">
-                  <div class="card-view-data">
+                  <div class="card-view-data after-effect">
                      <div class="card-view-data-header d-flex justify-content-between align-items-center">
-                        <h2>MT Trading</h2>
-                         
+                        <h2 class="span-color">MT Trading</h2>
+                         <img src="assets/images/icon/1.webp" alt="icon">
                      </div>
-                     <div class="card-view-body d-flex">
+                     <!-- <div class="card-view-body d-flex">
                         <div class="card-view-body-item text-center">
                            <p>Spread from</p>
                            <p><b>0.6 pips</b></p>
@@ -282,21 +282,21 @@
                            <p>Min deposit</p>
                            <p><b>$25</b></p>
                         </div>
-                     </div>
+                     </div> -->
                      <div class="card-instruments-area">
                         <div class="card-instrument-heading">
                            <ul class="d-flex align-items-center justify-content-between">
-                              <li>Instruments :</li>
-                              <li>80</li>
+                              <li>Instruments </li>
+                              <!-- <li>80</li> -->
                            </ul>
                         </div>
                         <div class="card-instrument-body">
                            <ul class="d-flex flex-wrap position-relative">
-                              <li>+ 35 currency pairs</li>
-                              <li>+ 10 indices</li>
-                              <li>+ gold and silver</li>
-                              <li>+ 30 cryptocurrencies</li>
-                              <li>+ 3 energies</li>
+                              <li><i class="fa-solid fa-check-to-slot"></i> 35 currency pairs</li>
+                              <li><i class="fa-solid fa-check-to-slot"></i> 10 indices</li>
+                              <li><i class="fa-solid fa-check-to-slot"></i> gold and silver</li>
+                              <li><i class="fa-solid fa-check-to-slot"></i> 30 cryptocurrencies</li>
+                              <li><i class="fa-solid fa-check-to-slot"></i> 3 energies</li>
                            </ul>
                         </div>
                      </div>
