--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </ul>
           </div>
           <div class="collapse navbar-collapse" id="main_nav">
-            <ul class="navbar-nav nav-rounded" id="outside-click">
+            <ul class="navbar-nav mx-auto nav-rounded" id="outside-click">
               <li class="nav-item dropdown has-megamenu">
                 <a
                   class="nav-link dropdown-toggle"
@@ -294,7 +294,6 @@
                           </ul>
                         </div>
                       </div>
-                      
                       <!-- end col-3 -->
 
                       <div class="col-lg-6 col-md-6">
@@ -316,9 +315,43 @@
                   class="nav-link dropdown-toggle"
                   href="#"
                   data-bs-toggle="dropdown"
-                  >Help Center <i class="fa-solid fa-angle-down"></i
+                  >Platform <i class="fa-solid fa-angle-down"></i
                 ></a>
                 <div class="dropdown-menu megamenu megamenu-4" role="menu">
+                  <div class="container">
+                    <div class="row g-3">
+                      <div class="col-lg-6 col-md-6">
+                        <div class="col-megamenu">
+                          <h6>Contacts</h6>
+                          <ul>
+                            <li><a href="#">Live chat</a></li>
+                            <li><a href="#">Callback</a></li>
+                          </ul>
+                        </div>
+                      </div>
+                      <!-- end col-3 -->
+                      <div class="col-lg-6 col-md-6">
+                        <div class="col-megamenu border-0">
+                          <h4>Our best spared and condition!</h4>
+                          <a href="#" class="primary-btn">Explore Now</a>
+                          <img
+                            src="assets/images/thumbnails/1.png"
+                            alt="icon"
+                          />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="nav-item dropdown has-megamenu">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  data-bs-toggle="dropdown"
+                  >Help Center <i class="fa-solid fa-angle-down"></i
+                ></a>
+                <div class="dropdown-menu megamenu megamenu-5" role="menu">
                   <div class="container">
                     <div class="row g-3">
                       
