--- a/commodities.html
+++ b/commodities.html
@@ -274,7 +274,6 @@
                               <li><p>Margin trading lets you create a diverse investment portfolio rather than locking up all your capital within a single transaction.</p></li>
                            </ul>
                         </div>  
-                         
                      </div>
                   </div>
                   <div class="col-md-5">
@@ -432,7 +431,7 @@
                   <!-- item -->
                   <div class="spreadsContent" id="spreads_trader">
                      <div class="clients-trading-table">
-                        <table class="data-show-table mobile-view-table">
+                        <table class="data-show-table mobile-view-table table-design">
                            <thead>
                              <tr>
                                <th class="bg-td1 bg-td-color text-start"><b>Symbol</b></th>
@@ -515,7 +514,7 @@
                         <table class="data-show-table mobile-view-table">
                            <thead>
                              <tr>
-                               <th class="bg-td1 bg-td-color text-start"><b>Symbol</b></th>
+                               <th class="bg-td1 bg-td-color text-start"><b>Symbol</b></th> 
                                <th class="bg-td-color text-start"><b>Description</b></th>
                                <th class="bg-td-color text-start"><b>Bid</b></th>
                                <th class="bg-td-color text-start"><b>Ask</b></th>
@@ -524,7 +523,6 @@
                              </tr>
                            </thead>
                            <tbody>
-                               
                               <tr>
                                  <td class="text-start">XAUUSD</td>
                                  <td class="text-start">Gold on Spot</td>
