--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </ul>
           </div>
           <div class="collapse navbar-collapse" id="main_nav">
-            <ul class="navbar-nav mx-auto nav-rounded" id="outside-click">
+            <ul class="navbar-nav nav-rounded" id="outside-click">
               <li class="nav-item dropdown has-megamenu">
                 <a
                   class="nav-link dropdown-toggle"
@@ -365,7 +365,6 @@
                         </div>
                       </div>
                       <!-- end col-3 -->
-
                       <div class="col-lg-6 col-md-6">
                         <div class="col-megamenu border-0">
                           <h4>Our best spared and condition!</h4>
@@ -1719,13 +1718,13 @@
                   alt="blog-image"
                 />
                 <div class="card-body">
-                  <h5 class="card-title">Ease Of Doing Business</h5>
+                  <h5><a href="#" class="card-title">Ease Of Doing Business</a></h5>
                   <p class="card-text">
                     Georgia has ranked 7th among 190 countries in the World Bank
                     Doing Business 2020 ranking, preceding the states like the
                     UK, Norway and Sweden.
                   </p>
-                  <a href="blog-details.html">Learn More</a>
+                  <a href="blog-details.html" class="card-btn">Learn More</a>
                 </div>
               </div>
             </div>
