--- a/index.html
+++ b/index.html
@@ -409,10 +409,10 @@
               <div class="header-right">
                 <ul class="d-flex align-items-center">
                   <li class="d-flex">
-                    <a href="#" class="primary-btn">Register</a>
+                    <a href="https://my.andromarkets.com/en/auth/sign-in" target="_blank" class="primary-btn">Register</a>
                   </li>
                   <li class="d-flex">
-                    <a href="#" class="primary-btn-bg-transparent">Login</a>
+                    <a href="https://my.andromarkets.com/en/auth/sign-in" class="primary-btn-bg-transparent" target="_blank">Login</a>
                   </li>
                   <li class="nav-item dropdown country-menu-parent large-view">
                     <a
