--- a/bonus-details.html
+++ b/bonus-details.html
@@ -357,7 +357,6 @@
         </div>
       </div>
     </section>
-
     <!-- Start potential area -->
     <section class="why-choose-bonus mt-100">
       <div class="container">
@@ -459,7 +458,7 @@
                   </p>
                 </div>
               </div>
-              <div class="step-number">01</div>
+              <div class="get-step-number">01</div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
@@ -476,7 +475,7 @@
                   </p>
                 </div>
               </div>
-              <div class="step-number">02</div>
+              <div class="get-step-number">02</div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
@@ -493,7 +492,7 @@
                   </p>
                 </div>
               </div>
-              <div class="step-number">03</div>
+              <div class="get-step-number">03</div>
             </div>
           </div>
           <div class="col-lg-12 text-center">
