--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css"
     />
+    <!-- slider css -->
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
+    />
     <link rel="stylesheet" href="assets/css/common.css" />
     <link rel="stylesheet" href="assets/css/animation.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
@@ -1709,38 +1722,126 @@
     <!-- Start Bonus section -->
     <section class="bonus-section ptb100 bg-pink-gradient">
       <div class="container">
-        <div class="row gy-4 gx-5 align-items-center">
-          <div class="col-lg-6">
-            <div class="customer-satisfaction-text">
-              <div class="common-heading-area text-center text-lg-start">
-                <h2>
-                  Claim up to
-                  <span class="span-color">200% Deposit Bonus</span> on Your
-                  Trading Funds
-                </h2>
-                <p class="mb-10 text-justify">
-                  Supercharge your trading journey with a
-                  <b>200% deposit bonus</b>! Instantly boost your account
-                  balance and gain the flexibility to take larger positions,
-                  manage risk more effectively, and enhance your profit
-                  potential — all with the added power of bonus capital.
-                </p>
-              </div>
+        <div class="row">
+          <div class="col-md-12 bonus-slider">
+            <!-- slider item -->
+            <div class="bonus-slider-item">
+              <div class="row gy-4 gx-5 align-items-center">
+                <div class="col-lg-6">
+                  <div class="customer-satisfaction-text">
+                    <div class="common-heading-area text-center text-lg-start">
+                      <h2>
+                        Claim up to
+                        <span class="span-color">200% Deposit Bonus</span> on
+                        Your Trading Funds
+                      </h2>
+                      <p class="mb-10 text-justify">
+                        Supercharge your trading journey with a
+                        <b>200% deposit bonus</b>! Instantly boost your account
+                        balance and gain the flexibility to take larger
+                        positions, manage risk more effectively, and enhance
+                        your profit potential — all with the added power of
+                        bonus capital.
+                      </p>
+                    </div>
 
-              <div class="text-center text-lg-start">
-                <a href="bonus-details.html" class="primary-btn"
-                  >See Details</a
-                >
+                    <div class="text-center text-lg-start">
+                      <a href="bonus-details.html" class="primary-btn"
+                        >See Details</a
+                      >
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="bonus-thumbnails">
+                    <img
+                      class="w-100"
+                      src="assets/images/thumbnails/bonus-1.png"
+                      alt="img"
+                    />
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="bonus-thumbnails">
-              <img
-                class="w-100"
-                src="assets/images/thumbnails/bonus-1.png"
-                alt="img"
-              />
+
+            <!-- slider item -->
+            <div class="bonus-slider-item">
+              <div class="row gy-4 gx-5 align-items-center">
+                <div class="col-lg-6">
+                  <div class="customer-satisfaction-text">
+                    <div class="common-heading-area text-center text-lg-start">
+                      <h2>
+                        Claim up to
+                        <span class="span-color">200% Deposit Bonus</span> on
+                        Your Trading Funds
+                      </h2>
+                      <p class="mb-10 text-justify">
+                        Supercharge your trading journey with a
+                        <b>200% deposit bonus</b>! Instantly boost your account
+                        balance and gain the flexibility to take larger
+                        positions, manage risk more effectively, and enhance
+                        your profit potential — all with the added power of
+                        bonus capital.
+                      </p>
+                    </div>
+
+                    <div class="text-center text-lg-start">
+                      <a href="bonus-details.html" class="primary-btn"
+                        >See Details</a
+                      >
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="bonus-thumbnails">
+                    <img
+                      class="w-100"
+                      src="assets/images/thumbnails/bonus-1.png"
+                      alt="img"
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- slider item -->
+            <div class="bonus-slider-item">
+              <div class="row gy-4 gx-5 align-items-center">
+                <div class="col-lg-6">
+                  <div class="customer-satisfaction-text">
+                    <div class="common-heading-area text-center text-lg-start">
+                      <h2>
+                        Claim up to
+                        <span class="span-color">200% Deposit Bonus</span> on
+                        Your Trading Funds
+                      </h2>
+                      <p class="mb-10 text-justify">
+                        Supercharge your trading journey with a
+                        <b>200% deposit bonus</b>! Instantly boost your account
+                        balance and gain the flexibility to take larger
+                        positions, manage risk more effectively, and enhance
+                        your profit potential — all with the added power of
+                        bonus capital.
+                      </p>
+                    </div>
+
+                    <div class="text-center text-lg-start">
+                      <a href="bonus-details.html" class="primary-btn"
+                        >See Details</a
+                      >
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="bonus-thumbnails">
+                    <img
+                      class="w-100"
+                      src="assets/images/thumbnails/bonus-1.png"
+                      alt="img"
+                    />
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -2220,9 +2321,13 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js"></script>
-
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
     <script>
       const images = document.querySelectorAll(".bonus-thumbnails img");
 
@@ -2392,6 +2497,21 @@
 
         window.addEventListener("resize", updateView);
         updateView();
+      });
+    </script>
+    <script>
+      $(document).ready(function () {
+        if ($(".bonus-slider").length) {
+          $(".bonus-slider").slick({
+            dots: false,
+            infinite: true,
+            speed: 3000,
+            slidesToShow: 1,
+            autoplay: true,
+            autoplaySpeed: 2000,
+            arrows: false,
+          });
+        }
       });
     </script>
   </body>
