--- a/index.html
+++ b/index.html
@@ -1844,6 +1844,10 @@
               </div>
             </div>
           </div>
+          <div class="slider-btn-area text-center mt-5 d-flex justify-content-center g-15">
+            <span class="slider-btn slider-left-btn"> <i class="fa-solid fa-angle-left"></i>  </span>
+            <span class="slider-btn slider-right-btn"> <i class="fa-solid fa-angle-right"></i> </span>
+          </div>
         </div>
       </div>
     </section>
@@ -2328,33 +2332,7 @@
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
-    <script>
-      const images = document.querySelectorAll(".bonus-thumbnails img");
 
-      const observer = new IntersectionObserver(
-        (entries) => {
-          entries.forEach((entry) => {
-            if (entry.isIntersecting) {
-              images.forEach((img, i) => {
-                setTimeout(() => {
-                  img.classList.add("bounce-in");
-                }, i * 300); // staggered bounce
-              });
-            } else {
-              // Remove class when out of view
-              images.forEach((img) => {
-                img.classList.remove("bounce-in");
-              });
-            }
-          });
-        },
-        {
-          threshold: 0.5, // when 50% in view
-        }
-      );
-
-      observer.observe(document.querySelector(".bonus-section"));
-    </script>
 
     <script>
       function evaluation(evt, coinmonitoring) {
@@ -2505,11 +2483,13 @@
           $(".bonus-slider").slick({
             dots: false,
             infinite: true,
-            speed: 3000,
+            speed: 1000,
             slidesToShow: 1,
             autoplay: true,
-            autoplaySpeed: 2000,
-            arrows: false,
+            autoplaySpeed: 2500,
+            arrows: true,
+            prevArrow: $('.slider-left-btn'),
+            nextArrow: $('.slider-right-btn'),
           });
         }
       });
